src/components/Header/styles.module.scss
.headerContainer {
  display: flex;
  align-items: center;

  width: 100%;
  height: 56px;

  padding-right: 1.625rem;
  padding-left: 1.625rem;

  background-color: var(--background-header);

  h1 {
    margin: 0;
    font-size: 1.15rem;
    font-weight: 500;
    line-height: 1.485rem;
    color: var(--white);
  }
}

